--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-MONGODB_URI="your mongodb URI"
+MONGODB_URI=mongodb+srv://sachin:sachin@cluster0.tz1q5p2.mongodb.net/chatty-server
+API_URL=http://localhost:3000
