--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-MONGODB_URI=mongodb+srv://sachin:sachin@cluster0.tz1q5p2.mongodb.net/chatty-server
-API_URL=http://localhost:3000
+MONGODB_URI="your mongodb URI"
